# Gridentify

./: .gitignore  Cargo.toml  test.py
.cargo/: config.toml
gridentify/: gridentify.pyi
src/: action.rs  bot.rs  client.rs  connection.rs  database.rs  grid.rs  high_score.rs  lib.rs  local.rs  main.rs  py_lib.rs  random.rs  server.rs  state.rs
src/game/: action.rs  local.rs  mod.rs  random.rs  state.rs
src/lib/: action.rs  client.rs  connection.rs  database.rs  local.rs  lucid.rs  random.rs  server.rs  state.rs
src/protocol/: client.rs  connection.rs  high_score.rs  mod.rs
