[package]
name = "gridentify"
version = "0.1.0"
authors = ["Hytak <lhc.holten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
array-init = "0.1.1"
rand = "0.7.3"
serde_json = "1.0.44"
tungstenite = "0.9.2"
native-tls = { version = "0.2.3", features = ["vendored"] }
ratelimit_meter = "5.0.0"
simple-error = "0.2.1"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
