[package]
name = "gridentify"
version = "0.1.0"
authors = ["Hytak <lhc.holten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
array-init = "0.1.1"
rand = "0.7.3"
serde_json = "1.0.44"
async-tungstenite = "0.14.0"
ratelimit_meter = "5.0.0"
simple-error = "0.2.1"
async-std = "1.8"
async-rustls = "0.2.0"
futures-util = "0.3.17"
rustls-acme = "0.1.7"
simple_logger = "1.13.0"
log = "0.4.14"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
