[package]
name = "gridentify"
version = "0.1.0"
authors = ["Hytak <lhc.holten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
tokio-tungstenite = "0.16"
tokio = { version = "1.15", features = ["time", "net", "rt", "macros"] }
tokio-rustls = "0.23"
futures-util = "0.3"
rustls-pemfile = "0.2"

array-init = "0.1"
rand = "0.7"
serde_json = "1.0"
ratelimit_meter = "5.0"
simple-error = "0.2"
simple_logger = "1.13"
log = "0.4"
arc-cell = "0.1"
rusqlite_migration = "1.0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]
